--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -115,7 +115,7 @@ paper-toggle-button.launcher-theme {
 
 #launcher-menu {
     /*color: white;*/
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(255, 255, 255, 0.9);
     padding-left: 6px;
 }
 
@@ -218,7 +218,8 @@ paper-toggle-button.launcher-theme {
 /* Toolbar custom theme */
 .launcher-toolbar {
     /*background-color: #43525d;*/
-    background-image: linear-gradient(-195deg, rgba(35, 190, 182, 0.5) 25%, #045e9c 100%);
+    /*background-image: linear-gradient(-195deg, rgba(35, 190, 182, 0.5) 25%, #045e9c 100%);*/
+    background-image: linear-gradient(-195deg, #1eaef8 25%, #1782fa 65%);
     color: white;
     font-size: 18px;
     height: 47px;
