--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -11,12 +11,14 @@
 body /deep/ juicy-tile-table,  body /deep/ .juicy-tile-table
 {
     min-width: 100px !important;
+    max-width: 600px !important;
 }
 
 body /deep/ juicy-shadow-row,  body /deep/ .juicy-shadow-row
 {
     height: 120px !important;
 }
+
 
 
 #launcher-menu {
