fixed config and settings

--- a/src/Launcher/wwwroot/Launcher/css/style.css
+++ b/src/Launcher/wwwroot/Launcher/css/style.css
@@ -68,8 +68,8 @@ body /deep/ juicy-shadow-row,  body /deep/ .juicy-shadow-row
 
 .workspace > juicy-tile-table,
 .workspace > juicy-composition {
-    /*flex: 1 1 auto;*/
-    padding: 10px; /*this is the desired padding - labelled as WS on Jocke's screenshot. In future this margin will be created by the outermost gap*/
+   /*flex: 1 1 auto;*/
+   /*padding: 10px;*/ /*this is the desired padding - labelled as WS on Jocke's screenshot. In future this margin will be created by the outermost gap*/
 }
 
 starcounter-include.workspace {
